--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "scripts": {
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-        "start": "nest start",
+        "start": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
         "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
@@ -23,8 +23,13 @@
         "@nestjs/common": "^10.0.0",
         "@nestjs/core": "^10.0.0",
         "@nestjs/platform-express": "^10.0.0",
+        "@nestjs/platform-fastify": "^10.4.4",
+        "@nestjs/swagger": "^7.4.2",
         "reflect-metadata": "^0.2.0",
-        "rxjs": "^7.8.1"
+        "run-script-webpack-plugin": "^0.2.0",
+        "rxjs": "^7.8.1",
+        "webpack": "^5.95.0",
+        "webpack-node-externals": "^3.0.0"
     },
     "devDependencies": {
         "@nestjs/cli": "^10.0.0",
