--- a/package.json
+++ b/package.json
@@ -21,13 +21,18 @@
     },
     "dependencies": {
         "@nestjs/common": "^10.0.0",
+        "@nestjs/config": "^3.2.3",
         "@nestjs/core": "^10.0.0",
         "@nestjs/platform-express": "^10.0.0",
         "@nestjs/platform-fastify": "^10.4.4",
         "@nestjs/swagger": "^7.4.2",
+        "@nestjs/typeorm": "^10.0.2",
+        "mysql2": "^3.11.3",
+        "pg": "^8.13.0",
         "reflect-metadata": "^0.2.0",
         "run-script-webpack-plugin": "^0.2.0",
         "rxjs": "^7.8.1",
+        "typeorm": "^0.3.20",
         "webpack": "^5.95.0",
         "webpack-node-externals": "^3.0.0"
     },
